--- a/package.json
+++ b/package.json
@@ -11,19 +11,23 @@
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
     "@smastrom/react-rating": "^1.3.2",
-    "@types/node": "20.6.3",
-    "@types/react": "18.2.22",
-    "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.16",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
     "framer-motion": "^10.16.4",
+    "moment": "^2.29.4",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2",
     "valtio": "^1.11.2"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.1.0",
+    "@types/node": "20.6.3",
+    "@types/react": "18.2.22",
+    "@types/react-dom": "18.2.7",
+    "typescript": "5.2.2"
   }
 }
